k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${CI_PROJECT_NAME}-internal
  namespace: ${KUBE_NAMESPACE}
  labels:
    app: ${CI_PROJECT_NAME}
spec:
  ports:
    - port: ${APP_PORT}
      targetPort: ${APP_PORT}
      protocol: TCP
      name: http
  selector:
    app: ${CI_PROJECT_NAME}
  type: ClusterIP
