k8s/04-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${CI_PROJECT_NAME}
  namespace: ${KUBE_NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: "api-gw"
    ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: ${CI_PROJECT_NAME}
spec:
  rules:
    - host: ${CI_PROJECT_NAME}.${ENDPOINT}
      http:
        paths:
          - path: /api/v1/health
            backend:
              serviceName: ${CI_PROJECT_NAME}
              servicePort: http
          - path: /api/v1/upload
            pathType: Prefix
            backend:
              serviceName: ${CI_PROJECT_NAME}
              servicePort: http
